# checkTask

./: CMakeLists.txt  README.md  main.cpp
GraphPacket/: Graph.cpp  Graph.h
Solution/: Solution.cpp  Solution.h
tests/: CMakeLists.txt  test1.cpp  test2.cpp  test3.cpp  test4.cpp
tests/in/: test1.in  test2.in  test4.in
